--- a/src/index.scss
+++ b/src/index.scss
@@ -542,10 +542,14 @@ h6 {
                       margin-bottom: 10px;
                     }
                   }
+                  > :first-child {
+                    display: none;
+                  }
                 }
               }
             }
           }
+         
         }
       }
     }
@@ -555,6 +559,96 @@ h6 {
       transform: scale(1) !important;
     }
   }
+  .detail-img{
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 999999;
+    height: 100vh;
+    .overlay{
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0, 0, 0, 0.8);
+      z-index: 2;
+    }
+    .close{
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      z-index: 3;
+      cursor: pointer;
+      i{
+        color: #fff;
+        font-size: 40px;
+      }
+    }
+    .wrapper{
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      max-width: 70rem;
+      width: 95%;
+      z-index: 3;
+    }
+    .slick-slider {
+      .slick-slide {
+        padding: 0 1.5rem;
+      }
+      .slick-arrow {
+        position: absolute;
+        top: 50%;
+        width: 3rem !important;
+        height: 3rem !important;
+        line-height: 3rem !important;
+        border-radius: 100%;
+        color: transparent;
+        z-index: 120;
+        cursor: pointer;
+        font-size: 0.8rem !important;
+        background: var(--primary);
+        &::before {
+          display: none !important;
+        }
+        &::after {
+          display: block;
+          font-family: 'remixicon';
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          top: 0 !important;
+          left: 0;
+          z-index: 2;
+          background: var(--primary);
+          border-radius: 50%;
+          color: white;
+          font-size: 1.2rem;
+        font-size: 2rem;
+        background: #19458b;
+
+
+        }
+      }
+      .slick-prev {
+        left: -.2rem !important;
+        &::after {
+          content: '\EA60';
+        }
+      }
+      .slick-next {
+        right: .2rem !important;
+        &::after {
+          content: '\EA6C';
+        }
+      }
+    }
+  }
+ 
 }
 
 @media only screen and (max-width: 1590px) {
